<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:content=".activity.MainActivity"
    >

    <ImageView
        android:id="@+id/avatarImageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/avatar"
        />


    <TextView
        android:id="@+id/authorTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="1111111111111111111111111111111"
        app:layout_constraintStart_toEndOf="@+id/avatarImageView"
        app:layout_constraintTop_toTopOf="@+id/avatarImageView"
        />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/avatarImageView"
        app:layout_constraintTop_toBottomOf="@+id/authorTextView"
        android:text="222222222222222222222222222222222"
        />

    <Button
        android:id="@+id/menu"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:backgroundTint="@color/white"
        app:icon="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/menu"
        />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/Barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatarImageView"
        />

    <TextView
        android:id="@+id/aboutTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatarImageView"
        android:text="3333333333333333333333333333333333333 33333333333333333   33333333333333333333333  33333333333333333333333 33333333"
        app:layout_editor_absoluteX="0dp"
        />



    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/Barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="aboutTextView"
        />


    <ImageView
        android:id="@+id/loveImageView"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Barrier3"
        app:srcCompat="@drawable/ic_baseline_like"
        />

    <TextView
        android:id="@+id/loveTextView"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintBottom_toBottomOf="@+id/loveImageView"
        app:layout_constraintStart_toEndOf="@+id/loveImageView"
        />


    <ImageView
        android:id="@+id/repostImageView"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/loveImageView"
        app:layout_constraintEnd_toStartOf="@+id/repostTextView"
        app:layout_constraintTop_toTopOf="@+id/loveImageView"
        app:srcCompat="@android:drawable/ic_menu_share"
        android:contentDescription="@string/repost"
        />

    <TextView
        android:id="@+id/repostTextView"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/loveImageView"
        app:layout_constraintEnd_toStartOf="@+id/seeImageView"
        app:layout_constraintStart_toEndOf="@+id/loveTextView"
        app:layout_constraintTop_toTopOf="@+id/loveImageView"
        />

    <ImageView
        android:id="@+id/seeImageView"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/see"
        app:layout_constraintBottom_toBottomOf="@+id/loveImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Barrier3"
        app:srcCompat="@drawable/ic_baseline_remove_red_eye_24"
        />

    <TextView
        android:id="@+id/seeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/seeImageView"
        app:layout_constraintStart_toEndOf="@+id/seeImageView"
        app:layout_constraintTop_toTopOf="@+id/seeImageView"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/Barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="youTubePictire"
        />


    <ImageView
        android:id="@+id/youTubeMoviePlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Barrier2"
        app:srcCompat="@drawable/ic_video_24" />

    <ImageView
        android:id="@+id/youTubePictire"
        android:layout_width="wrap_content"
        android:layout_height="92dp"
        app:layout_constraintEnd_toStartOf="@+id/youTubeMoviePlay"
        app:layout_constraintTop_toBottomOf="@+id/Barrier2"
        app:layout_constraintBottom_toTopOf="@id/Barrier3"
        app:srcCompat="@drawable/youtubepictire" />

</androidx.constraintlayout.widget.ConstraintLayout>